CKeditor Responsive Plugin 8.x-1.0-beta2, 2017-03-17
- Change hook_enable to hook_install #2861257
- Add link to readme file during installation

CKeditor Responsive Plugin 8.x-1.0-beta1, 2016-11-22
--------------------------
- Update documentation
- Port the module to Drupal 8

CKeditor Responsive Plugin 7.x-1.0alpha1, xxxx-xx-xx
--------------------------
- Add screenshots
- Update README.txt
- Change text strings to english
- Edit module's metadata