@@ -1,3 +1,6 @@
+CKeditor Responsive Plugin 8.x-1.0-beta3, 2017-XX-XX
+- Remove @file tag #2861518
+
 CKeditor Responsive Plugin 8.x-1.0-beta2, 2017-03-17
 - Change hook_enable to hook_install #2861257
 - Add link to readme file during installation
